# ChangeLog for sys-libs/db
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-libs/db/ChangeLog,v 1.48 2003/09/13 20:58:34 robbat2 Exp $

  13 Sep 2003; Robin H. Johnson <robbat2@gentoo.org> db-4.0.14-r2.ebuild:
  added Kumba's changes for mips

  08 Sep 2003; Alexander Gabert <pappy@gentoo.org> db-3.2.9-r7.ebuild,
  db-3.2.9-r9.ebuild, db-4.0.14-r2.ebuild:
  changed hardened-gcc, db works now with etdyn

  08 Sep 2003; Robin H. Johnson <robbat2@gentoo.org> db-4.0.14-r2.ebuild:
  mark db-4.0 as stable on x86, and put it into testing on all other arches

  07 Sep 2003; Alexander Gabert <pappy@gentoo.org> db-3.2.9-r7.ebuild,
  db-3.2.9-r9.ebuild, db-4.0.14-r2.ebuild:
  added hardened-gcc changes to CC

*db-3.2.9-r9 (02 Sep 2003)

  02 Sep 2003; Robin H. Johnson <robbat2@gentoo.org> db-3.2.9-r9.ebuild:
  add some more symlink stuff to db_fix_so in the eclass, and remove the old
  broken leftover parts from ebuild

*db-4.1.25_p1-r1 (21 Aug 2003)

  21 Aug 2003; Robin H. Johnson <robbat2@gentoo.org> db-3.2.9-r8.ebuild,
  db-4.0.14-r2.ebuild, db-4.1.25_p1-r1.ebuild:
  crucial fix to all ebuilds db-3 or newer for bad symlinks in /usr/lib and
  /usr/include, code is now in db.eclass

*db-3.2.9-r7 (17 Aug 2003)

  17 Aug 2003; Paul de Vrieze <pauldv@gentoo.org> db-3.2.3h-r4.ebuild,
  db-3.2.9-r1.ebuild, db-3.2.9-r5.ebuild, db-3.2.9-r7.ebuild, db-3.2.9.ebuild:
  New stable version with support for db-4 and that actually installs the static
  libraries

*db-4.0.14-r1 (16 Aug 2003)

  16 Aug 2003; Martin Schlemmer <azarah@gentoo.org> db-4.0.14-r1.ebuild,
  files/db-4.0.14-fix-dep-link.patch:
  Get db to link libdb* to correct dependencies ... for example if we use
  NPTL or NGPT, db detects usable mutexes, and should link against
  libpthread, but does not do so ...

*db-4.1.25_p1 (05 Aug 2003)

  05 Aug 2003; Paul de Vrieze <pauldv@gentoo.org> db-4.1.25_p1.ebuild: